Fixing date selctor ui on IOS

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -641,6 +641,7 @@ html {
   display: flex;
   text-align: center;
   height: 4vh;
+  border-width: 0px !important;
 }
 
 .date-search:hover {
